--- a/animal.html
+++ b/animal.html
@@ -88,13 +88,12 @@
           lion: {
             x: 400,
             y: 70
-          }//,
-          /*
-          other: {
-            x: ,
-            y: 
           }
-          */
+          /*other: {
+            x: 90,
+            y: 50
+          }*/
+          
         };
 
         var outlines = {
@@ -114,6 +113,10 @@
             x: 100,
             y: 390
           }
+          /*other_black: {
+            x: 100,
+            y: 250
+          }*/
         };
 
         // create draggable animals
