--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
           lion: {
             x: 400,
             y: 70
-          }
-          /*other: {
+          },
+          other: {
             x: 90,
             y: 50
-          }*/
+          }
           
         };
 
@@ -112,11 +112,11 @@
           lion_black: {
             x: 100,
             y: 390
-          }
-          /*other_black: {
+          },
+          other_black: {
             x: 100,
             y: 250
-          }*/
+          }
         };
 
         // create draggable animals
@@ -223,7 +223,10 @@
         monkey_black: 'monkey_black.png',
         giraffe: 'giraffe.png',
         giraffe_glow: 'giraffe_glow.png',
-        giraffe_black: 'giraffe_black.png'
+        giraffe_black: 'giraffe_black.png',
+        other: 'other.png',
+        other_glow: 'other_glow.png',
+        other_black: 'other_black.png'
       };
       loadImages(sources, initStage);
     </script>
