--- a/index.html
+++ b/index.html
@@ -228,5 +228,6 @@
         other_black: 'other_black.png'
       };
       loadImages(sources, initStage);
+      <input type ="button" onclick="history.back()" value="回到上一頁"></input>
     </script>
   <script src="/li
