--- a/index.html
+++ b/index.html
@@ -228,6 +228,6 @@
         other_black: 'other_black.png'
       };
       loadImages(sources, initStage);
-      <input type ="button" onclick="javascript:location.href='https://l0u0l.github.io/March_03/'" value="回個人網頁"></input>
+      //<input type ="button" onclick="javascript:location.href='https://l0u0l.github.io/March_03/'" value="回個人網頁"></input>
     </script>
   <script src="/li
