--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
                 if (++score >= 5) {
                   var text = 'You win! Enjoy your booty!';
                   drawBackground(background, images.beach, text);
+                  window.location.href="https://l0u0l.github.io/March_03/" ;
                 }
 
                 // disable drag and drop
