--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   </head>
   <body>
     <div id="container"></div>
+    <h2><a href = "javascript:window.location.reload()"> Refresh </a></h2>;
+    <h2><a href = "https://l0u0l.github.io/March_03/"> Mainpage </a></h2>;
     <script>
       function loadImages(sources, callback) {
         var assetDir = 'assets/';
@@ -153,7 +155,6 @@
                 if (++score >= 5) {
                   var text = 'You win! Enjoy your booty!';
                   drawBackground(background, images.beach, text);
-                  window.location.href="https://l0u0l.github.io/March_03/" ;
                 }
 
                 // disable drag and drop
